@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - Moved onReady function to utils
           - Buttons now position on the right when required
           - Renames JS files
           - Adds drag title and icons to DataStructure field type
